CallMD/src/objects/Medical_Conditions__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Medical Conditions</relationshipLabel>
        <relationshipName>Medical_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Medical Conditions</label>
    <nameField>
        <label>Medical Conditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>